# rosserial_stm32_usb_cdc

./: CMakeLists.txt  README.md  package.xml
ros_lib/: BufferedSerial.cpp  BufferedSerial.hpp  STM32Hardware.h
