<?xml version="1.0"?>
<package format="2">
  <!-- Info -->
  <name>rosserial_stm32f4_usb_cdc</name>
  <version>1.0.0</version>
  <description>
    ROSserial implementation for STM32F4, developed to work with STM32CubeIDE projects.
  </description>

  <maintainer email="kdgyun88@gmail.com">DGiun</maintainer>
  <author>DGiun</author>

  <license>DGiun</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_msg</exec_depend>

</package>
